<resources>
    <string name="app_name">DevCalc</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="bin">BIN</string>
    <string name="dec">DEC</string>
    <string name="hex">HEX</string>
    <string name="hex_prefix">0x</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="increment"> ++</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="or">|</string>
    <string name="xor">^</string>
    <string name="not">~</string>
    <string name="left_shift"><![CDATA[<<]]></string>
    <string name="right_shift"><![CDATA[>>]]></string>
    <string name="decrement">- -</string>
    <string name="clear_entry">ce</string>
    <string name="clear">C</string>
    <string name="backspace"><![CDATA[<-]]></string>
</resources>
