<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="5">

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/backspace"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_clear_entry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear_entry"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_left_shift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/left_shift"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_right_shift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/right_shift"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/d"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/e"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/f"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_and"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/and"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_not"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/not"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/a"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/b"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/c"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_or"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/or"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_xor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/xor"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_increment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/increment"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_decrement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/decrement"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_rowWeight="2"/>

</android.support.v7.widget.GridLayout>
