<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp">

    <RadioButton
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:button="@android:color/transparent"
        android:text="@string/bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="13dp"/>

    <RadioButton
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:button="@android:color/transparent"
        android:text="@string/dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="13dp"/>

    <RadioButton
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:button="@android:color/transparent"
        android:text="@string/hex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="13dp"/>
</RadioGroup>